Fixed the headerlogin alignment

--- a/styles/redesignHeader/header.scss
+++ b/styles/redesignHeader/header.scss
@@ -402,7 +402,7 @@
 		text-decoration: none;
 	  }
 	}
-.label-redesign {
+.headerDropdown {
 	  button#headerAccnt-dropdown {
 		padding: 0;
 		margin: 0;
